g-v1.output
Terminals unused in grammar

    MAIORIGUAL
    MENORIGUAL


State 3 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: PRINCIPAL Bloco

    2 Bloco: '{' VarSection ListaComando '}'

    3 VarSection: ε
    4           | ListaDeclVar

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' Tipo ';'

    7 DeclVar: ',' IDENTIFICADOR DeclVar
    8        | ε

    9 Tipo: INT
   10     | CAR

   11 ListaComando: Comando
   12             | Comando ListaComando

   13 Comando: Expr ';'
   14        | LEIA IDENTIFICADOR ';'
   15        | ESCREVA Expr ';'
   16        | ESCREVA CADEIACARACTERES ';'
   17        | NOVALINHA ';'
   18        | SE '(' Expr ')' ENTAO Comando FIMSE
   19        | SE '(' Expr ')' ENTAO Comando SENAO Comando FIMSE
   20        | ENQUANTO '(' Expr ')' Comando
   21        | Bloco

   22 Expr: OrExpr
   23     | IDENTIFICADOR '=' Expr

   24 OrExpr: OrExpr OU AndExpr
   25       | AndExpr

   26 AndExpr: AndExpr E EqExpr
   27        | EqExpr

   28 EqExpr: EqExpr IGUAL DesigExpr
   29       | EqExpr DIFERENTE DesigExpr
   30       | DesigExpr

   31 DesigExpr: DesigExpr '<' AddExpr
   32          | DesigExpr '>' AddExpr
   33          | AddExpr

   34 AddExpr: AddExpr '+' MulExpr
   35        | MulExpr

   36 MulExpr: MulExpr '*' UnExpr
   37        | UnExpr

   38 UnExpr: '-' PrimExpr
   39       | '!' PrimExpr
   40       | PrimExpr

   41 PrimExpr: IDENTIFICADOR
   42         | CARCONST
   43         | INTCONST
   44         | '(' Expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 39
    '(' (40) 18 19 20 44
    ')' (41) 18 19 20 44
    '*' (42) 36
    '+' (43) 34
    ',' (44) 7
    '-' (45) 38
    ':' (58) 5 6
    ';' (59) 5 6 13 14 15 16 17
    '<' (60) 31
    '=' (61) 23
    '>' (62) 32
    '{' (123) 2
    '}' (125) 2
    error (256)
    PRINCIPAL (258) 1
    INT (259) 9
    CAR (260) 10
    LEIA (261) 14
    ESCREVA (262) 15 16
    NOVALINHA (263) 17
    SE (264) 18 19
    ENTAO (265) 18 19
    SENAO (266) 19
    FIMSE (267) 18 19
    ENQUANTO (268) 20
    OU (269) 24
    E (270) 26
    IGUAL (271) 28
    DIFERENTE (272) 29
    MAIORIGUAL (273)
    MENORIGUAL (274)
    IDENTIFICADOR (275) 5 6 7 14 23 41
    INTCONST (276) 43
    CARCONST (277) 42
    CADEIACARACTERES (278) 16


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    Programa (39)
        on left: 1
        on right: 0
    Bloco (40)
        on left: 2
        on right: 1 21
    VarSection (41)
        on left: 3 4
        on right: 2
    ListaDeclVar (42)
        on left: 5 6
        on right: 4 5
    DeclVar (43)
        on left: 7 8
        on right: 5 6 7
    Tipo (44)
        on left: 9 10
        on right: 5 6
    ListaComando (45)
        on left: 11 12
        on right: 2 12
    Comando (46)
        on left: 13 14 15 16 17 18 19 20 21
        on right: 11 12 18 19 20
    Expr (47)
        on left: 22 23
        on right: 13 15 18 19 20 23 44
    OrExpr (48)
        on left: 24 25
        on right: 22 24
    AndExpr (49)
        on left: 26 27
        on right: 24 25 26
    EqExpr (50)
        on left: 28 29 30
        on right: 26 27 28 29
    DesigExpr (51)
        on left: 31 32 33
        on right: 28 29 30 31 32
    AddExpr (52)
        on left: 34 35
        on right: 31 32 33 34
    MulExpr (53)
        on left: 36 37
        on right: 34 35 36
    UnExpr (54)
        on left: 38 39 40
        on right: 36 37
    PrimExpr (55)
        on left: 41 42 43 44
        on right: 38 39 40


State 0

    0 $accept: • Programa $end

    PRINCIPAL  shift, and go to state 1

    Programa  go to state 2


State 1

    1 Programa: PRINCIPAL • Bloco

    '{'  shift, and go to state 3

    Bloco  go to state 4


State 2

    0 $accept: Programa • $end

    $end  shift, and go to state 5


State 3

    2 Bloco: '{' • VarSection ListaComando '}'

    IDENTIFICADOR  shift, and go to state 6

    IDENTIFICADOR  [reduce using rule 3 (VarSection)]
    $default       reduce using rule 3 (VarSection)

    VarSection    go to state 7
    ListaDeclVar  go to state 8


State 4

    1 Programa: PRINCIPAL Bloco •

    $default  reduce using rule 1 (Programa)


State 5

    0 $accept: Programa $end •

    $default  accept


State 6

    5 ListaDeclVar: IDENTIFICADOR • DeclVar ':' Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR • DeclVar ':' Tipo ';'

    ','  shift, and go to state 9

    $default  reduce using rule 8 (DeclVar)

    DeclVar  go to state 10


State 7

    2 Bloco: '{' VarSection • ListaComando '}'

    LEIA           shift, and go to state 11
    ESCREVA        shift, and go to state 12
    NOVALINHA      shift, and go to state 13
    SE             shift, and go to state 14
    ENQUANTO       shift, and go to state 15
    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '{'            shift, and go to state 3
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Bloco         go to state 22
    ListaComando  go to state 23
    Comando       go to state 24
    Expr          go to state 25
    OrExpr        go to state 26
    AndExpr       go to state 27
    EqExpr        go to state 28
    DesigExpr     go to state 29
    AddExpr       go to state 30
    MulExpr       go to state 31
    UnExpr        go to state 32
    PrimExpr      go to state 33


State 8

    4 VarSection: ListaDeclVar •

    $default  reduce using rule 4 (VarSection)


State 9

    7 DeclVar: ',' • IDENTIFICADOR DeclVar

    IDENTIFICADOR  shift, and go to state 34


State 10

    5 ListaDeclVar: IDENTIFICADOR DeclVar • ':' Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar • ':' Tipo ';'

    ':'  shift, and go to state 35


State 11

   14 Comando: LEIA • IDENTIFICADOR ';'

    IDENTIFICADOR  shift, and go to state 36


State 12

   15 Comando: ESCREVA • Expr ';'
   16        | ESCREVA • CADEIACARACTERES ';'

    IDENTIFICADOR     shift, and go to state 16
    INTCONST          shift, and go to state 17
    CARCONST          shift, and go to state 18
    CADEIACARACTERES  shift, and go to state 37
    '('               shift, and go to state 19
    '-'               shift, and go to state 20
    '!'               shift, and go to state 21

    Expr       go to state 38
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 13

   17 Comando: NOVALINHA • ';'

    ';'  shift, and go to state 39


State 14

   18 Comando: SE • '(' Expr ')' ENTAO Comando FIMSE
   19        | SE • '(' Expr ')' ENTAO Comando SENAO Comando FIMSE

    '('  shift, and go to state 40


State 15

   20 Comando: ENQUANTO • '(' Expr ')' Comando

    '('  shift, and go to state 41


State 16

   23 Expr: IDENTIFICADOR • '=' Expr
   41 PrimExpr: IDENTIFICADOR •

    '='  shift, and go to state 42

    $default  reduce using rule 41 (PrimExpr)


State 17

   43 PrimExpr: INTCONST •

    $default  reduce using rule 43 (PrimExpr)


State 18

   42 PrimExpr: CARCONST •

    $default  reduce using rule 42 (PrimExpr)


State 19

   44 PrimExpr: '(' • Expr ')'

    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Expr       go to state 43
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 20

   38 UnExpr: '-' • PrimExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19

    PrimExpr  go to state 45


State 21

   39 UnExpr: '!' • PrimExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19

    PrimExpr  go to state 46


State 22

   21 Comando: Bloco •

    $default  reduce using rule 21 (Comando)


State 23

    2 Bloco: '{' VarSection ListaComando • '}'

    '}'  shift, and go to state 47


State 24

   11 ListaComando: Comando •
   12             | Comando • ListaComando

    LEIA           shift, and go to state 11
    ESCREVA        shift, and go to state 12
    NOVALINHA      shift, and go to state 13
    SE             shift, and go to state 14
    ENQUANTO       shift, and go to state 15
    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '{'            shift, and go to state 3
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    $default  reduce using rule 11 (ListaComando)

    Bloco         go to state 22
    ListaComando  go to state 48
    Comando       go to state 24
    Expr          go to state 25
    OrExpr        go to state 26
    AndExpr       go to state 27
    EqExpr        go to state 28
    DesigExpr     go to state 29
    AddExpr       go to state 30
    MulExpr       go to state 31
    UnExpr        go to state 32
    PrimExpr      go to state 33


State 25

   13 Comando: Expr • ';'

    ';'  shift, and go to state 49


State 26

   22 Expr: OrExpr •
   24 OrExpr: OrExpr • OU AndExpr

    OU  shift, and go to state 50

    $default  reduce using rule 22 (Expr)


State 27

   25 OrExpr: AndExpr •
   26 AndExpr: AndExpr • E EqExpr

    E  shift, and go to state 51

    $default  reduce using rule 25 (OrExpr)


State 28

   27 AndExpr: EqExpr •
   28 EqExpr: EqExpr • IGUAL DesigExpr
   29       | EqExpr • DIFERENTE DesigExpr

    IGUAL      shift, and go to state 52
    DIFERENTE  shift, and go to state 53

    $default  reduce using rule 27 (AndExpr)


State 29

   30 EqExpr: DesigExpr •
   31 DesigExpr: DesigExpr • '<' AddExpr
   32          | DesigExpr • '>' AddExpr

    '<'  shift, and go to state 54
    '>'  shift, and go to state 55

    $default  reduce using rule 30 (EqExpr)


State 30

   33 DesigExpr: AddExpr •
   34 AddExpr: AddExpr • '+' MulExpr

    '+'  shift, and go to state 56

    $default  reduce using rule 33 (DesigExpr)


State 31

   35 AddExpr: MulExpr •
   36 MulExpr: MulExpr • '*' UnExpr

    '*'  shift, and go to state 57

    $default  reduce using rule 35 (AddExpr)


State 32

   37 MulExpr: UnExpr •

    $default  reduce using rule 37 (MulExpr)


State 33

   40 UnExpr: PrimExpr •

    $default  reduce using rule 40 (UnExpr)


State 34

    7 DeclVar: ',' IDENTIFICADOR • DeclVar

    ','  shift, and go to state 9

    $default  reduce using rule 8 (DeclVar)

    DeclVar  go to state 58


State 35

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' • Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' • Tipo ';'

    INT  shift, and go to state 59
    CAR  shift, and go to state 60

    Tipo  go to state 61


State 36

   14 Comando: LEIA IDENTIFICADOR • ';'

    ';'  shift, and go to state 62


State 37

   16 Comando: ESCREVA CADEIACARACTERES • ';'

    ';'  shift, and go to state 63


State 38

   15 Comando: ESCREVA Expr • ';'

    ';'  shift, and go to state 64


State 39

   17 Comando: NOVALINHA ';' •

    $default  reduce using rule 17 (Comando)


State 40

   18 Comando: SE '(' • Expr ')' ENTAO Comando FIMSE
   19        | SE '(' • Expr ')' ENTAO Comando SENAO Comando FIMSE

    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Expr       go to state 65
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 41

   20 Comando: ENQUANTO '(' • Expr ')' Comando

    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Expr       go to state 66
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 42

   23 Expr: IDENTIFICADOR '=' • Expr

    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Expr       go to state 67
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 43

   44 PrimExpr: '(' Expr • ')'

    ')'  shift, and go to state 68


State 44

   41 PrimExpr: IDENTIFICADOR •

    $default  reduce using rule 41 (PrimExpr)


State 45

   38 UnExpr: '-' PrimExpr •

    $default  reduce using rule 38 (UnExpr)


State 46

   39 UnExpr: '!' PrimExpr •

    $default  reduce using rule 39 (UnExpr)


State 47

    2 Bloco: '{' VarSection ListaComando '}' •

    $default  reduce using rule 2 (Bloco)


State 48

   12 ListaComando: Comando ListaComando •

    $default  reduce using rule 12 (ListaComando)


State 49

   13 Comando: Expr ';' •

    $default  reduce using rule 13 (Comando)


State 50

   24 OrExpr: OrExpr OU • AndExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    AndExpr    go to state 69
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 51

   26 AndExpr: AndExpr E • EqExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    EqExpr     go to state 70
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 52

   28 EqExpr: EqExpr IGUAL • DesigExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    DesigExpr  go to state 71
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 53

   29 EqExpr: EqExpr DIFERENTE • DesigExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    DesigExpr  go to state 72
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 54

   31 DesigExpr: DesigExpr '<' • AddExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    AddExpr   go to state 73
    MulExpr   go to state 31
    UnExpr    go to state 32
    PrimExpr  go to state 33


State 55

   32 DesigExpr: DesigExpr '>' • AddExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    AddExpr   go to state 74
    MulExpr   go to state 31
    UnExpr    go to state 32
    PrimExpr  go to state 33


State 56

   34 AddExpr: AddExpr '+' • MulExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    MulExpr   go to state 75
    UnExpr    go to state 32
    PrimExpr  go to state 33


State 57

   36 MulExpr: MulExpr '*' • UnExpr

    IDENTIFICADOR  shift, and go to state 44
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    UnExpr    go to state 76
    PrimExpr  go to state 33


State 58

    7 DeclVar: ',' IDENTIFICADOR DeclVar •

    $default  reduce using rule 7 (DeclVar)


State 59

    9 Tipo: INT •

    $default  reduce using rule 9 (Tipo)


State 60

   10 Tipo: CAR •

    $default  reduce using rule 10 (Tipo)


State 61

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo • ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' Tipo • ';'

    ';'  shift, and go to state 77


State 62

   14 Comando: LEIA IDENTIFICADOR ';' •

    $default  reduce using rule 14 (Comando)


State 63

   16 Comando: ESCREVA CADEIACARACTERES ';' •

    $default  reduce using rule 16 (Comando)


State 64

   15 Comando: ESCREVA Expr ';' •

    $default  reduce using rule 15 (Comando)


State 65

   18 Comando: SE '(' Expr • ')' ENTAO Comando FIMSE
   19        | SE '(' Expr • ')' ENTAO Comando SENAO Comando FIMSE

    ')'  shift, and go to state 78


State 66

   20 Comando: ENQUANTO '(' Expr • ')' Comando

    ')'  shift, and go to state 79


State 67

   23 Expr: IDENTIFICADOR '=' Expr •

    $default  reduce using rule 23 (Expr)


State 68

   44 PrimExpr: '(' Expr ')' •

    $default  reduce using rule 44 (PrimExpr)


State 69

   24 OrExpr: OrExpr OU AndExpr •
   26 AndExpr: AndExpr • E EqExpr

    E  shift, and go to state 51

    $default  reduce using rule 24 (OrExpr)


State 70

   26 AndExpr: AndExpr E EqExpr •
   28 EqExpr: EqExpr • IGUAL DesigExpr
   29       | EqExpr • DIFERENTE DesigExpr

    IGUAL      shift, and go to state 52
    DIFERENTE  shift, and go to state 53

    $default  reduce using rule 26 (AndExpr)


State 71

   28 EqExpr: EqExpr IGUAL DesigExpr •
   31 DesigExpr: DesigExpr • '<' AddExpr
   32          | DesigExpr • '>' AddExpr

    '<'  shift, and go to state 54
    '>'  shift, and go to state 55

    $default  reduce using rule 28 (EqExpr)


State 72

   29 EqExpr: EqExpr DIFERENTE DesigExpr •
   31 DesigExpr: DesigExpr • '<' AddExpr
   32          | DesigExpr • '>' AddExpr

    '<'  shift, and go to state 54
    '>'  shift, and go to state 55

    $default  reduce using rule 29 (EqExpr)


State 73

   31 DesigExpr: DesigExpr '<' AddExpr •
   34 AddExpr: AddExpr • '+' MulExpr

    '+'  shift, and go to state 56

    $default  reduce using rule 31 (DesigExpr)


State 74

   32 DesigExpr: DesigExpr '>' AddExpr •
   34 AddExpr: AddExpr • '+' MulExpr

    '+'  shift, and go to state 56

    $default  reduce using rule 32 (DesigExpr)


State 75

   34 AddExpr: AddExpr '+' MulExpr •
   36 MulExpr: MulExpr • '*' UnExpr

    '*'  shift, and go to state 57

    $default  reduce using rule 34 (AddExpr)


State 76

   36 MulExpr: MulExpr '*' UnExpr •

    $default  reduce using rule 36 (MulExpr)


State 77

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo ';' • ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' Tipo ';' •

    IDENTIFICADOR  shift, and go to state 6

    IDENTIFICADOR  [reduce using rule 6 (ListaDeclVar)]
    $default       reduce using rule 6 (ListaDeclVar)

    ListaDeclVar  go to state 80


State 78

   18 Comando: SE '(' Expr ')' • ENTAO Comando FIMSE
   19        | SE '(' Expr ')' • ENTAO Comando SENAO Comando FIMSE

    ENTAO  shift, and go to state 81


State 79

   20 Comando: ENQUANTO '(' Expr ')' • Comando

    LEIA           shift, and go to state 11
    ESCREVA        shift, and go to state 12
    NOVALINHA      shift, and go to state 13
    SE             shift, and go to state 14
    ENQUANTO       shift, and go to state 15
    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '{'            shift, and go to state 3
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Bloco      go to state 22
    Comando    go to state 82
    Expr       go to state 25
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 80

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo ';' ListaDeclVar •

    $default  reduce using rule 5 (ListaDeclVar)


State 81

   18 Comando: SE '(' Expr ')' ENTAO • Comando FIMSE
   19        | SE '(' Expr ')' ENTAO • Comando SENAO Comando FIMSE

    LEIA           shift, and go to state 11
    ESCREVA        shift, and go to state 12
    NOVALINHA      shift, and go to state 13
    SE             shift, and go to state 14
    ENQUANTO       shift, and go to state 15
    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '{'            shift, and go to state 3
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Bloco      go to state 22
    Comando    go to state 83
    Expr       go to state 25
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 82

   20 Comando: ENQUANTO '(' Expr ')' Comando •

    $default  reduce using rule 20 (Comando)


State 83

   18 Comando: SE '(' Expr ')' ENTAO Comando • FIMSE
   19        | SE '(' Expr ')' ENTAO Comando • SENAO Comando FIMSE

    SENAO  shift, and go to state 84
    FIMSE  shift, and go to state 85


State 84

   19 Comando: SE '(' Expr ')' ENTAO Comando SENAO • Comando FIMSE

    LEIA           shift, and go to state 11
    ESCREVA        shift, and go to state 12
    NOVALINHA      shift, and go to state 13
    SE             shift, and go to state 14
    ENQUANTO       shift, and go to state 15
    IDENTIFICADOR  shift, and go to state 16
    INTCONST       shift, and go to state 17
    CARCONST       shift, and go to state 18
    '{'            shift, and go to state 3
    '('            shift, and go to state 19
    '-'            shift, and go to state 20
    '!'            shift, and go to state 21

    Bloco      go to state 22
    Comando    go to state 86
    Expr       go to state 25
    OrExpr     go to state 26
    AndExpr    go to state 27
    EqExpr     go to state 28
    DesigExpr  go to state 29
    AddExpr    go to state 30
    MulExpr    go to state 31
    UnExpr     go to state 32
    PrimExpr   go to state 33


State 85

   18 Comando: SE '(' Expr ')' ENTAO Comando FIMSE •

    $default  reduce using rule 18 (Comando)


State 86

   19 Comando: SE '(' Expr ')' ENTAO Comando SENAO Comando • FIMSE

    FIMSE  shift, and go to state 87


State 87

   19 Comando: SE '(' Expr ')' ENTAO Comando SENAO Comando FIMSE •

    $default  reduce using rule 19 (Comando)
